samples/_failures_safe/1761549397_2295c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_61f4d6b9.c: In function ‘main’:
./samples/SAFE/__tmp_61f4d6b9.c:153:20: error: missing terminating " character
  153 |             printf("Error
      |                    ^~~~~~
./samples/SAFE/__tmp_61f4d6b9.c:153:13: error: expected expression at end of input
  153 |             printf("Error
      |             ^~~~~~
./samples/SAFE/__tmp_61f4d6b9.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_61f4d6b9.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_61f4d6b9.c:153:13: error: expected declaration or statement at end of input
